--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,9 +44,34 @@ li a:hover {
     background-color: #38567B;
 }
 
+input[type=text] {
+    margin-left: 30%;
+    width: 40%;
+    text-align: center;
+}
+
+textarea {
+    margin-left: 10%;
+    width: 80%;
+    height: 150px;
+    resize: inherit;
+}
+
+h4{
+    text-align: center;
+    font-size: 24px;
+}
+
+.form_button {
+    margin-left: 40%;
+    width: 20%;
+    height: 40%;
+    text-align: center;
+}
+
 .title  {
-        text-align: center;
-        text-decoration: underline;
-        font-size: 50pt;
-        font-weight: 400;
-}   
+    text-align: center;
+    text-decoration: underline;
+    font-size: 50pt;
+    font-weight: 400;
+}
