--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,23 +3,31 @@
 
     <%= form_for @post do |p|%>
         <p>
-        <%=p.label :title%>
+        <h4><%=p.label :title%></h4>
         <%=p.text_field :title, required: true%>
         </p>
+        </br>
+
         <p>
-        <%=p.label :content%>
+        <h4><%=p.label :content%></h4>
         <%=p.text_area :content, required: true%>
         </p>
+        </br>
+
         <p>
-        <%=p.label :category%>
-        <%=p.select :category, ["Lifestyle", "Music","Food","Fitness"], required: true%>
+       <h4> <%=p.label :category%></h4>
+        <%=p.select :category, ["Lifestyle", "Music","Food","Fitness"], {}, {required: true, class: "form_button"}%>
+        </p>
+        </br>
+
         <p>
-        <%=p.label :author_name%>
+        <h4><%=p.label :author_name%></h4>
         <%=p.text_field :author_name, required: true%>
         </p>
+        </br>
         <p>
-        <%=p.submit "Post"%>
-        </p>
+        <%=p.submit "Post", class: "form_button"%>
+        </p></br>
 
     <% end %>
 </html>
