--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
   <ul>
     <li><%= link_to "Home", root_path %></li>
     <li><%= link_to "New Post", "/posts/new"%></li>
+    <li class ="title"> BlogSite  </li>
   </ul>
-
   </head>
 
   <body>
