--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -89,10 +89,10 @@ h4{
     text-align: center;
     border: none;
     font-family: 'Open Sans', sans-serif;
+    font-size: 15pt;
     padding: 14px 16px;
     border-radius: 12px;
-    
-
+    background-color: white;
 }
 
 .title  {
