--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+
+
+
+ /* CSS for index.html */
+
 body {
         background-color: #FFFBF0;
         font-family: 'Roboto', sans-serif;
@@ -45,6 +51,35 @@ li a:hover {
     background-color: #BFCDD7;
 }
 
+
+
+h4{
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.post_index {
+    margin-top: 5%;
+    margin-left: 15%;
+    font-size: 20pt;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 70;
+}
+
+.post_header {
+    margin-top: 5%;
+    margin-left: 10%;
+    text-align: left;
+
+}
+
+
+
+
+/* CSS for new.html */
+
 input[type=text] {
     margin-left: 30%;
     width: 40%;
@@ -66,14 +101,6 @@ textarea {
     border: none;
     border-radius: 12px;
 }
-
-h4{
-    text-align: center;
-    font-size: 30px;
-    font-weight: 400;
-    font-family: 'Open Sans', sans-serif;
-}
-
 .form_title {
     font-size: 25pt;
         font-weight: 70;
@@ -107,17 +134,43 @@ h4{
     text-decoration: none
 }
 
-.post_index {
-    margin-top: 5%;
-    margin-left: 10%;
-    font-size: 20pt;
+
+
+
+
+
+
+
+
+/* CSS for show.html */
+
+.show_title {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 350;
     font-family: 'Open Sans', sans-serif;
-    font-weight: 70;
 }
 
-.post_header {
-    margin-top: 5%;
-    margin-left: 10%;
-    text-align: left;
+.show_content {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 350;
+    font-family: 'Open Sans', sans-serif;
+}
 
+.show_category {
+    font-style: italic;
+    text-align: left;
+    margin-left: 5%;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.show_author {
+    font-style: italic;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 350;
+    font-family: 'Open Sans', sans-serif;
 }
