--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,7 +60,7 @@ h4{
     font-family: 'Open Sans', sans-serif;
 }
 
-.post_index {
+.post_fields {
     margin-top: 5%;
     margin-left: 15%;
     font-size: 20pt;
