--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   <ul>
     <li><%= link_to "Home", root_path %></li>
-    <li><%= link_to "New Post", "/posts/new"%></li>
+    <li><%= link_to "New Post", new_post_path %></li>
     <li class ="title"> BlogSite  </li>
   </ul>
   </head>
