--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,7 @@
     </br>
     <h4 class="post_header">Featured posts:</h4>
     <% @posts.each do |p| %>
-        <div class="post_fields"><%= p.category %>: <%= p.title %> , <%= p.author_name %>, <%= link_to "show", post_path(p) %></div>
+        <div class="post_fields"><%= p.category %>: <%= p.title %> , <%= p.author_name %>, <%= link_to "show", post_path(p), class: "show_button" %></div>
     <% end %>
 </body>
 
