--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,10 +2,17 @@
 
 <html>
     <head>
+    <%= stylesheet_link_tag 'show' %>
         <h4 class = "show_category"> <%= @post.category%></h4>
-        <%= link_to "Delete", @post, method: :delete, class: "delete_button" %>
+        
         </head>
-    
+
+    <div class="dropdown">
+        <button class="dropbtn">Options</button>
+        <div class = "dropdown-content">
+            <%= link_to "Delete", @post, method: :delete, class: "delete_button" %>
+        </div>
+    </div>
     <body>
         <h3 class = "show_title"> <%= @post.title %> </h3>
         <h4 class = "show_author"> by <%= @post.author_name%></h4>
