--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,36 +1,29 @@
-<!DOCTYPE html>
+<!DOCTYpE html>
 <html>
-
-    <%= form_for @post do |p|%>
-
+    <%= form_for @post do |post|%>
         <div>
-            <h4 class="form_title"><%=p.label :title%></h4>
-            <%=p.text_field :title, required: true%>
+            <h4 class="form_title"><%=post.label :title%></h4>
+            <%=post.text_field :title, required: true%>
         </div>
         </br>
-
         <div>
-            <h4 class="form_title"> <%=p.label :category%></h4>
-            <%=p.select :category, ["Lifestyle", "Music","Food","Fitness"], {}, {required: true, class: "form_button"}%>
+            <h4 class="form_title"> <%=post.label :category%></h4>
+            <%=post.select :category, ["Lifestyle", "Music","Food","Fitness"], {}, {required: true, class: "form_button"}%>
         </div>
         </br>
-
         <div>
-            <h4 class="form_title"><%=p.label :author_name%></h4>
-            <%=p.text_field :author_name, required: true%>
+            <h4 class="form_title"><%=post.label :author_name%></h4>
+            <%=post.text_field :author_name, required: true%>
         </div>
         </br>
-
          <div>
-            <h4 class="form_title"><%=p.label :content%></h4>
-            <%=p.text_area :content, required: true%>
+            <h4 class="form_title"><%=post.label :content%></h4>
+            <%=post.text_area :content, required: true%>
         </div>
         </br>
-
         <div>
-            <%=p.submit "Post", class: "form_button"%>
+            <%=post.submit "post", class: "form_button"%>
         </div>
         </br>
-
     <% end %>
 </html>
