--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>PostApp</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -10,12 +12,32 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <ul>
-    <li><%= link_to "Home", root_path %></li>
-    <li><%= link_to "New Post", new_post_path %></li>
-    <li class ="title"> BlogSite  </li>
-  </ul>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light">
+    <a href="#" class="navbar-brand">
+       <%= image_tag "telegram.png", alt:"Logo", width:30 , height:30, class:"d-inline-block align-top" %>
+      BlogSite</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#toggleMobileMenu"
+        aria-controls="toggleMobileMenu"
+        aria-expanded="false"
+        aria-labler="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="toggleMobileMenu">
+        <ul class="navbar-nav ms-auto text-center">
+          <li class="nav-link"><%= link_to "Home", root_path, class:"link" %></li>
+          <li class="nav-link"><%= link_to "New Post", new_post_path, class:"link" %></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
   </head>
+
   <body>
     <%= yield %>
   </body>
