Reformatted show page using bootstrap

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -27,3 +27,13 @@
 .show_button:hover {
     background-color: #DFDCD2;
 }
+
+.link_to {
+    float: right;
+    text-decoration: none;
+    color: grey;
+}
+
+.link_to:hover{
+    color:black;
+}
