--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -2,8 +2,8 @@
 
 .show_title {
     text-align: center;
-    font-size: 40px;
-    font-weight: 350;
+    font-size: 45px;
+    font-weight: 70;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -19,45 +19,21 @@
     text-align: left;
     margin-left: 5%;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 300;
     font-family: 'Open Sans', sans-serif;
 }
 
 .show_author {
     font-style: italic;
     text-align: center;
-    font-size: 20px;
-    font-weight: 350;
+    font-size: 22px;
+    font-weight: 70;
     font-family: 'Open Sans', sans-serif;
 }
 
-.dropbtn {
-    float: right;
-    background-color:#DFDCD2;
+.btn {
+    background-color: #FFFBF0;
+    color: black;
     border: none;
-    font-size: 16px;    
 }
 
-.dropdown {
-    float: right;
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #DFDCD2;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px;
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color:black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown:hover .dropdown-content {display: block;}
