--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,34 @@
 
     <%= stylesheet_link_tag 'show' %>
-     <h4 class = "show_category"> <%= @post.category%></h4>
-<div class="dropdown">
+<div class="container">
+    <div class = "row">
+        <div class="col-sm-2 d-inline-block align-top">
+             <div class = "show_category"> Category: <%= @post.category%></div>
+        </div>
+        <div class="col-sm-8 text-center"> 
+            <h3 class = "show_title"> <%= @post.title %> </h3>
+            <h4 class = "show_author"> by <%= @post.author_name%></h4>
+        </div>
+        <div class="col-sm-2 ms-auto text-center">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Options
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <%= link_to "Delete", @post, method: :delete, class: "dropdown-item" %>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </div>
+        </div>
+    </div>
+ </div>   
+    
+<!--<div class="dropdown">
         <button class="dropbtn">Options</button>
         <div class = "dropdown-content">
             <%= link_to "Delete", @post, method: :delete, class: "delete_button" %>
-        </div>
+        </div>-->
 </div>
-    <h3 class = "show_title"> <%= @post.title %> </h3>
-    <h4 class = "show_author"> by <%= @post.author_name%></h4>
-    </br>
     </br>
     <div class = "show_content"> <%= @post.content %></div>
