--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,11 @@
   </head>
 
   <body>
+    <% flash.each do |type, msg| %>  
+      <div class="alert alert-info">    
+      <%= msg %>  
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
