--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,7 +15,7 @@
         <td><%= post.category %></td>
         <td><%= post.title%></td>
         <td><%= post.author_name %></td> 
-        <td><%= link_to "show", post_path(post), class:"link_to" %></td>
+        <td><%= link_to "View Posts", post_path(post), class:"link_to" %></td>
         </tr>
         <% end %>
     </table>
