--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,6 +17,7 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><%= link_to "Delete", @post, method: :delete, class: "dropdown-item" %></li>
+                    <li><%= link_to "Edit", edit_post_path(@post), class: "dropdown-item"%></li>
                 </ul>
             </div>
         </div>
