Functioning error messages and associated bootstrap

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -19,7 +19,7 @@
     </br>
     <div>
         <h4 class="form_title"><%=post.label :content%></h4>
-        <%=post.text_area :content, required: true%>
+        <%=post.text_area :content%>
     </div>
     </br>
     <div>
