--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,12 +39,12 @@
   </head>
   <body>
     <% flash.each do |type, msg| %>  
-      <% if type = "notice" %>
+      <% if type == "notice" %>
         <div class="alert alert-info">    
         <%= msg %>  
         </div>
-      <% elsif type = "error" %>
-        <% :error.each do |error| %>
+      <% elsif type == "error" %>
+        <% flash[:error].each do |error| %>
           <div class="alert alert-danger">    
           <%= error %>  
           </div>
