--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -20,7 +20,7 @@
     </br>
     <div>
         <h4 class="form_title"><%=post.label :content%></h4>
-        <%=post.text_area :content, required: true%>
+        <%=post.text_area :content%>
     </div>
     </br>
     <div>
