--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,12 +18,17 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><%= link_to "Delete", @post, method: :delete, class: "dropdown-item" %></li>
                     <li><%= link_to "Edit", edit_post_path(@post), class: "dropdown-item"%></li>
+                    <li><%= link_to "Comment", post_comments_path(@post), class: "dropdown-item"%></li>
                 </ul>
             </div>
         </div>
     </div>
  </div> 
-    </br>
-    </br>
-    </br>
-    <div class = "show_content"> <%= @post.content %></div>
+</br>
+</br>
+</br>
+<div class = "show_content"> <%= @post.content %></div>
+
+<p>
+    <h4>Comments</h4>
+</p>
