--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,10 +29,10 @@
 </br>
 <div class = "show_content"> <%= @post.content %></div>
 
-<p>
-    <h4>Comments</h4>
-<% @comments.each do |comment|%>
-    <%= comment.content %>
-<%end %>
-
-</p>
+<div class="container">
+    <div class="comment_title">Comments</div>
+    <ul>
+        <% @comments.each do |comment|%>
+        <li><%= comment.name %></li>
+    <%end %>
+</div>
