Removed bullet points in ul

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -33,7 +33,8 @@
     <div class="comment_title">Comments</div>
     <ul>
         <% @comments.each do |comment|%>
-        <li><%= comment.content %>,<%= comment.name%></li>
+        <li><%= comment.content %></li>
+        <li class="tiny">-<%= comment.name%></li>
     </ul>
     <%end %>
 </div>
