--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -50,3 +50,12 @@
     padding-block: 12px;
     text-decoration: underline black 1px;
 }
+
+.tiny {
+    margin-left: 10pt;
+    font-size: 10pt;
+}
+
+ul {
+    list-style-type: none;
+}
