--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><%= link_to "Delete", @post, method: :delete, class: "dropdown-item" %></li>
                     <li><%= link_to "Edit", edit_post_path(@post), class: "dropdown-item"%></li>
-                    <li><%= link_to "Comment", new_comment_path(@post), class: "dropdown-item"%></li>
+                    <li><%= link_to "Comment", new_comment_path(post_id: @post.id), class: "dropdown-item"%></li>
                 </ul>
             </div>
         </div>
