--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,14 +41,18 @@
     <% flash.each do |type, msg| %>  
       <% if type == "notice" %>
         <div class="alert alert-info">    
-        <%= msg %>  
+          <%= msg %>  
         </div>
       <% elsif type == "error" %>
         <% flash[:error].each do |error| %>
           <div class="alert alert-danger">    
-          <%= error %>  
+            <%= error %>  
           </div>
         <% end %>
+      <% elsif type == "success"%>
+        <div class="alert alert-success">
+          <%= msg %>
+        </div>
       <% end %>
     <% end %>
     <%= yield %>
