--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,12 +29,67 @@
 </br>
 <div class = "show_content"> <%= @post.content %></div>
 
-<div class="container">
-    <div class="comment_title">Comments</div>
-    <ul class="comment_list">
-        <% @comments.each do |comment|%>
-        <li class="comment"><%= comment.content %></li>
-        <li class="name">-<%= comment.name%></li>
-    </ul>
-    <%end %>
+
+<section style="background-color: #f7f6f6;">
+  <div class="container my-5 py-5 text-dark">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-12 col-lg-10 col-xl-8">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+          <div class="card">
+            <div class="card-body p-2 d-flex align-items-center">
+              <h6 class="text-primary fw-bold small mb-0 me-1" id="switch">Show Comments</h6>
+              <div class="form-check form-switch">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  onclick="myFunction()"
+                  id="flexSwitchCheckChecked"
+                  checked
+                />
+                <label class="form-check-label" for="flexSwitchCheckChecked"></label>
+              </div>
+            </div>
+          </div>
+        </div>
+  <div id="comments">
+    <% @comments.each do |comment| %>
+        <div class="card mb-3">
+          <div class="card-body">
+            <div class="d-flex flex-start">
+            
+                <div class="w-100">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h6 class="text-primary fw-bold mb-0">
+                        <%=comment.name%>
+                        <span class="text-dark ms-2"><%= comment.content %></span>
+                    </h6>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center">
+                    <p class="small mb-0" style="color: #aaa;">
+                    </p>
+                    <div class="d-flex flex-row">
+                        <i class="fas fa-star text-warning me-2"></i>
+                        <i class="far fa-check-circle" style="color: #aaa;"></i>
+                    </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+            <%end%>
+      </div>
+    </div>
+  </div>
+</section>
 </div>
+
+<script>
+    function myFunction() {
+    var x = document.getElementById("comments");
+    if (x.style.display === "none"){
+        x.style.display = "block";
+    } else {
+        x.style.display = "none";
+    }
+}
+</script>
