--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -37,7 +37,7 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
           <div class="card">
             <div class="card-body p-2 d-flex align-items-center">
-              <h6 class="text-primary fw-bold small mb-0 me-1" id="switch">Show Comments</h6>
+              <h6 class="text-muted fw-bold small mb-0 me-1" id="switch">Show Comments</h6>
               <div class="form-check form-switch">
                 <input
                   class="form-check-input"
@@ -59,7 +59,7 @@
             
                 <div class="w-100">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h6 class="text-primary fw-bold mb-0">
+                    <h6 class="text-muted fw-bold mb-0">
                         <%=comment.name%>
                         <span class="text-dark ms-2"><%= comment.content %></span>
                     </h6>
