Changed background colour of comments section

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,7 +30,7 @@
 <div class = "show_content"> <%= @post.content %></div>
 
 
-<section style="background-color: #f7f6f6;">
+<section style="background-color: #FFFBF0;">
   <div class="container my-5 py-5 text-dark">
     <div class="row d-flex justify-content-center">
       <div class="col-md-12 col-lg-10 col-xl-8">
