--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,7 @@
 
     <%= stylesheet_link_tag 'show' %>
 </br>
+
 <div class="container">
     <div class = "row">
         <div class="col-sm-2 d-inline-block align-top">
@@ -27,17 +28,20 @@
 </br>
 </br>
 </br>
-<div class = "show_content"> <%= @post.content %></div>
+<div class="row">
+    <div class=col-3></div>
+    <div class = "show_content col-sm-6 text-justify"> <%= @post.content %></div>
+    <div class=col-3></div>
+</div>
 
-
-<section style="background-color: #FFFBF0;">
+<section >
   <div class="container my-5 py-5 text-dark">
     <div class="row d-flex justify-content-center">
       <div class="col-md-12 col-lg-10 col-xl-8">
         <div class="d-flex justify-content-between align-items-center mb-4">
           <div class="card">
             <div class="card-body p-2 d-flex align-items-center">
-              <h6 class="text-muted fw-bold small mb-0 me-1" id="switch">Show Comments</h6>
+              <h6 class="comment_button text-dark fw-bold small mb-0 me-1" id="switch">Show Comments</h6>
               <div class="form-check form-switch">
                 <input
                   class="form-check-input"
