Formatted table in index.html

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,10 @@
 
 <%= stylesheet_link_tag "index"%>
 <div class="container">
-    <h4 class="post_header">Featured posts:</h4>
-    <table>
+    <div class="row">
+        <h4 class="post_header ms-auto">Featured posts:</h4>
+    </div>
+    <table class="table">
         <tr>
         <th>Category</th>
         <th>Title</th>
