--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -9,8 +9,10 @@
 }
 
 .post_header {
+    font-family: 'Open Sans', sans-serif;
+    font-weight:70;
     margin-top: 5%;
-    margin-left: 10%;
+    margin-left: ;
     text-align: left;
 
 }
@@ -39,8 +41,7 @@
 }
 
 table {
-    margin-left: 10%;
-    margin-top: 10%;
+    margin-top: 5%;
     width: 50%;
     font-size: 25px;
     text-align: center;
