--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
         <h4 class="post_header ms-auto">Featured posts:</h4>
     </div>
-    <table class="table">
+    <table id="dtBasicExample" class="table">
         <tr>
         <th>Category</th>
         <th>Title</th>
@@ -17,7 +17,7 @@
         <td><%= post.category %></td>
         <td><%= post.title%></td>
         <td><%= post.author_name %></td> 
-        <td><%= link_to "View Posts", post_path(post), class:"link_to" %></td>
+        <td><%= link_to "View Post", post_path(post), class:"link_to" %></td>
         </tr>
         <% end %>
     </table>
