--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -33,13 +33,13 @@
 }
 
 .btn {
-    background-color: white;
+    background-color: #EDF4FF;
     color: black;
     border: none;
 }
 
 .btn:hover{
-    background-color: grey;
+    background-color: #CFE2FF
 }
 
 .comment_title {
@@ -75,4 +75,8 @@ li {
 .comment {
     text-align: left;
     margin-left: 10pt;
+}
+
+.head {
+    background-color: #EDF4FF;
 }
