--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
         <h4 class="post_header ms-auto">Featured posts:</h4>
     </div>
-    <table id="dtBasicExample" class="table">
+    <table class="table table-primary table-striped">
         <tr>
         <th>Category</th>
         <th>Title</th>
