Added validation to model, nested :comments

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,7 @@
-<%= form_for @comment do |comment|%>
+<head>
+    <%= stylesheet_link_tag 'new' %>
+</head>
+<%= form_for [@post, @comment] do |comment|%>
     <div>
         <h4 class="form_title"><%=comment.label :name%></h4>
         <%=comment.text_field :name, required: true%>
@@ -10,7 +13,6 @@
     </div>
     </br>
         <%=comment.submit "comment", class: "form_button"%>
-        <%= comment.hidden_field :post_id, value: "#{params[:post_id]}" %>
     </div>
     </br>
 <% end %>
