--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,6 @@
 
     <%= stylesheet_link_tag 'show' %>
 </br>
-
 <div class="head container">
     <div class = "row">
         <div class="col-sm-2 d-inline-block align-top">
@@ -19,7 +18,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><%= link_to "Delete", @post, method: :delete, class: "dropdown-item" %></li>
                     <li><%= link_to "Edit", edit_post_path(@post), class: "dropdown-item"%></li>
-                    <li><%= link_to "Comment", new_comment_path(post_id: @post.id), class: "dropdown-item"%></li>
+                    <li><%= link_to "Comment", new_post_comment_path(@post), class: "dropdown-item"%></li>
                 </ul>
             </div>
         </div>
